fix footer bug on mobile screen

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -166,6 +166,10 @@ footer {
 }
 
 @media (max-width: 480px) {
+  footer {
+    height: auto;
+  }
+
   .footer-upper {
     display: none;
   }
